# pyPIPS

./: .flake8  .gitattributes  .gitignore  .gitignore_to_merge  .pylintrc  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  D0_obsPIPS_1B.csv  D0_obsPIPS_2A.csv  D0_radPIPS_1B.csv  D0_radPIPS_2A.csv  DSDlib.py  HPC_COMPILER_GUIDE.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  MIGRATION_PLAYBOOK.md  MODERNIZATION_SUMMARY.md  README.md  README.rst  SATP.py  compile_raymond  disdrometer_module.py  environment.yml  environment.yml_backup  environment.yml_bak  environment_applem1.yml  environment_nopysteps.yml  environment_test.yml  environment_test2.yml  obanmodule.py  plot_CFRadial.py  pyPIPS.py  pyPIPS_CG.py  pyPIPS_FMCW.py  pyPIPS_lookup.py  pyPIPS_merge.py  pyPIPS_radar.py  pyPIPScontrol.py  (+8 more)
analysis_scripts/: ARPS_to_PIPS.py  ARPS_xyslice_to_nc.py  PIPS_csv_to_nc.py  PIPS_to_nc.py  PIPS_to_sticknet_csv.py  apply_QC.py  average_PIPS.py  calc_DSD.py  calc_DSD_nc.py  calc_MM_fits.py  calc_RB15.py  calc_SATP.py  calc_SATP_nc.py  calc_derived_params.py  calc_gamma_DSD.py  calc_plot_CG.py  calc_radar_retrieval_PIPS.py  calc_radar_retrieval_sweep.py  combine_DSDs.py  create_retrieval_lookup.py  error_out  filter_radar_sweep.py  output  radar_to_PIPS.py  remove_fields.py  remove_fields_nc.py  set_location.py
analysis_scripts/legacy/: calc_DSD.py
configs/: DELTA_IOP2_2024_10s.py  FMCW_032717.py  FMCW_040517.py  FMCW_043017.py  FMCW_043017_2000_0000.py  FMCW_2017_all.py  FMCW_rain_only.py  ICECHIP_IOP1_2025_10s.py  ICECHIP_IOP2_2025_10s.py  ICECHIP_IOP2_2025_10s_PIPS3A.py  ICECHIP_IOP3_2025_10s.py  ICECHIP_IOP4_2025_10s.py  ICECHIP_IOP5_2025_10s.py  IOP1A_2017_GWX_noPIPS2A.py  IOP1B_2017_GWX_noPIPS2A.py  IOP1B_2017_GWX_noPIPS2A_D2.py  IOP1_2016.py  IOP3B_2017.py  IOP3_2016.py  IOP3_2016_PIPS2B.py  IOP4A_4D_2016_HTX_PIPS1A.py  IOP4A_4D_2016_HTX_PIPS1A_1.py  IOP4A_4D_2016_HTX_PIPS1A_2.py  IOP4A_4D_2016_HTX_PIPS1A_3.py  IOP4A_4D_2016_HTX_PIPS1A_4.py  IOP4A_4D_2016_HTX_PIPS1A_5.py  IOP4A_4D_2016_HTX_PIPS1A_6.py  IOP4A_4D_2016_PIPS1A_1.py  IOP4A_4D_2016_PIPS1A_2.py  IOP4A_4D_2016_PIPS1A_3.py  IOP4A_4D_2016_PIPS1A_4.py  IOP4A_4D_2016_PIPS1A_5.py  IOP4A_4D_2016_PIPS1A_6.py  IOP4A_4D_2016_PIPS1A_7.py  IOP4B_2016.py  IOP4B_2016_GWX_noPIPS1A.py  IOP4B_2016_GWX_noPIPS1A_RB15.py  IOP4B_2016_HTX_PIPS1A.py  IOP4B_2016_PIPS1A.py  IOP4B_2016_noPIPS1A.py  (+105 more)
data/lookups/: Dm.csv  RR.csv
data/lookups_old/: D0.csv  sigm.csv  w.csv
input/: pyPIPScontrol.py
legacy_code/: plot_CFRadial_DSD.py
lookups/: D0.csv  R.csv  lam.csv  mu.csv  sigm.csv  w.csv
modules/: DSDlib.py  DSDretrieval.py  DSDretrieval_radar.py  arpsmodule.py  commasmodule.py  compile_dualpara  datahandler.py  disdrometer_module.py  dualpara.f90  empirical_module.py  obanmodule.py  plotmodule.py  radarmodule.py  simulator.py  thermolib.py  timemodule.py  utils.py  wrfmodule.py
notebooks/: ARPS_PIPS_comp-Copy1.ipynb  ARPS_PIPS_comp.ipynb  ARPS_PIPS_comp2.ipynb  ARPS_PIPS_comp_stats.ipynb  ARPS_PIPS_comp_stats_new.ipynb  ARPS_PIPS_comp_stats_new_2a.ipynb  ARPS_PIPS_comp_stats_new_CCN_100.ipynb  ARPS_PIPS_comp_stats_new_CCN_1000_meteograms.ipynb  ARPS_PIPS_comp_stats_new_CCN_1000_original.ipynb  ARPS_PIPS_comp_stats_new_CCN_1000_original_Zdr.ipynb  ARPS_PIPS_comp_stats_new_CCN_1000_original_bak072820.ipynb  ARPS_PIPS_comp_stats_new_CCN_1000_original_dBZ.ipynb  ARPS_PIPS_comp_stats_new_CCN_1000_original_test.ipynb  ARPS_PIPS_comp_stats_new_CCN_100_Zdr.ipynb  ARPS_PIPS_comp_stats_new_CCN_100_dBZ.ipynb  ARPS_comp_stats_meteogram_test.ipynb  Compare model and observed DSDs.ipynb  Fix_garbled_TOB3.ipynb  HCA_test.ipynb  KGWX_20160331220000_20160331234000_fields_at_PIPS.nc  PIPS_Stats_Bar_Graph.ipynb  PIPS_sim_to_nc.ipynb  PIPS_simulator_demo.ipynb  PIPSsim.ipynb  PIPSsim2.ipynb  PIPSsimARPS.ipynb  PlotQCmask.ipynb  Plot_XTRRA_RHI.ipynb  Untitled.ipynb  Untitled2.ipynb  WSR-88D_PlotExercise_ZDRsmooth.ipynb  XTRRA_to_CFRadial.ipynb  advect_correct_and_interp_gridded_radar_042916.ipynb  advect_correct_and_interp_gridded_radar_PERiLS_IOP2.ipynb  calc_precip_trajectories_from_gridded_radar-Backup.ipynb  calc_precip_trajectories_from_gridded_radar.ipynb  calc_precip_trajectories_from_gridded_radar_0325.ipynb  calc_precip_trajectories_from_gridded_radar_0325_dtd.ipynb  calc_precip_trajectories_from_gridded_radar_0325_latest.ipynb  calc_precip_trajectories_from_gridded_radar_0327_latest.ipynb  (+89 more)
oldcode/: fragments.py  plot_disdrometer_oldV2.py
plotting_scripts/: plot_CG.py  plot_DSD.py  plot_DSD_meteograms.py  plot_DSD_meteograms_nc.py  plot_DSD_nc.output  plot_DSD_nc.py  plot_Dm_sigma.py  plot_TriPIPS_real_time.py  plot_conv_meteograms.py  plot_conv_meteograms_nc.py  plot_parsivel_diag_timeseries.py  plot_radar_ppi.prof  plot_radar_ppi.py  plot_retrieval_timeseries_nc.py  plot_scatter_PIPS_retrieval.py  plot_scatter_nc.py  plot_scatterplots.py  plot_vel_D.py  plot_vel_D_nc.py  pyPIPS_driver.py
pyPIPS/: DSDlib.py  DSDretrieval.py  DSDretrieval_radar.py  PIPS.py  __init__.py  _version.py  arpsmodule.py  commasmodule.py  ctablesfrompyesviewer.py  disdrometer_module.py  dualpara.f90  empirical_module.py  fmcw.py  global_module.f90  markup.py  obanmodule.py  parsivel_params.py  parsivel_qc.py  pips_io.py  pips_realtime.py  pips_realtime_config_bak.py  plotmodule.py  polarimetric.py  pyPIPScontrol.py  pyXTRRA.py  radarmodule.py  rsa_table.mod  simulator.py  takmodule.py  thermolib.py  timemodule.py  utils.py
python_scripts/: output  plot_TriPIPS_real_time.py  pyPIPS.py  pyPIPS_driver.py  pyPIPS_merge.py  pyPIPS_meteograms.py
realtime_scripts/: plot_PIPS_real_time.py  plot_PIPS_realtime.sh  plot_TriPIPS_real_time.py  plot_monitor_PIPS_realtime.sh  read_PIPS_real_time.py  read_PIPS_realtime.sh  read_monitor_PIPS_realtime.sh
scripts/: SATP.py  pyPIPS.py  pyPIPS_CG.py  pyPIPS_FMCW.py  pyPIPS_lookup.py  pyPIPS_merge.py  pyPIPS_radar.py  pyPIPSloc.py
shell_scripts/: make_movie_script  run_tripips_realtime.sh  sequence_script  tripips.sh
utility_scripts/: dump_TriPIPS_netcdf.py  get_nexrad_data_aws.py  pyPIPS_correct.py  pyPIPS_merge.py
(+143 files in other folders)
